--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
+]
 @font-face {
     font-family: 'XVIIIe';
     src: url('font/ShelleyAndanteBT.ttf') format('truetype');
