--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-@font-face {
-    font-family: 'XVIIIe';
-    src: url('font/ShelleyAndanteBT.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'attache';
-    src: url('font/Rochester.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'canal';
-    src: url('font/Futura Bold.otf') format('truetype');
+*::-webkit-scrollbar {
+    display: none;
 }
 
 ::selection {
@@ -35,17 +24,67 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    overflow: hidden;
+}
+h1, h2, h3, h4, p, small {
+    margin: 0;
+}
+a {
+    text-decoration: none;
+}
+
+/* Menu flottant */
+aside {
+    position: fixed;
+    bottom: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+}
+nav a:not(nav a:last-child) {
+    margin-right: 10px;
+}
+nav a {
+    font-family: "Luxurious Roman";
+    color: black;
+    background: white;
+    width: 180px;
+    height: 35px;
+    border-radius: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background 0.5s, color 0.5s;
+}
+nav a:first-child, nav a:hover {
+    background: black;
+    color: white;
+}
+
+/* main */
+main {
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    scroll-snap-stop: always;
+    overflow-y: scroll;
+    height: 100vh;
 }
 section {
     display: flex;
     text-align: center;
     justify-content: center;
     width: 100%;
+    height: 100vh;
+    scroll-snap-align: start;
+    position: relative;
 }
-h1, h2, h3, h4, p, small {
-    margin: 0;
-}
-#republic {
+
+.republic {
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -54,16 +93,16 @@ h1, h2, h3, h4, p, small {
     align-items: center;
     text-align: center;
 }
-#republic > p {
+.republic > p {
     font-family: 'attache';
 }
-#republic > p:first-child {
+.republic > p:first-child {
     font-size: clamp(0.7rem,3vw,2.5rem);
 }
-#republic > p:nth-child(2) {
+.republic > p:nth-child(2) {
     font-size: clamp(2rem,7vw,8rem);
 }
-#republic > p:last-child {
+.republic > p:last-child {
     font-size: clamp(0.9rem,4vw,3rem);
 }
 #gregorien {
@@ -77,31 +116,6 @@ h1, h2, h3, h4, p, small {
 }
 #gregorien > p {
     font-style: italic;
-}
-#sect_conv, #sect_direct {
-    position: absolute;
-    margin-bottom: 25px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-#button_conv, #button_direct {
-    font-style: italic;
-    font-family: 'Luxurious Roman';
-    border: none;
-    background-color: aqua;
-    font-size: 2rem;
-    padding: 5px;
-    border-radius: 7px;
-    cursor: pointer;
-    transition: 0.5s background-color, 0.5s letter-spacing;
-}
-#button_direct {
-    margin-bottom: 35px;
-}
-#button_conv:hover, #button_direct:hover {
-    background-color: aquamarine;
-    letter-spacing: 5px;
-    transition: all 0.5s;
 }
 input[type="datetime-local"] {
     margin-top: 10px;
